test/corpus/alignof.txt
==================
alignof 
==================

fun i32 @main () {
init:
  bid: b0
  allocations: 


block b0:
  %b0:i0:u64 = typecast 4:i32 to u64
  %b0:i1:u1 = cmp eq 4:u64 %b0:i0:u64
  %b0:i2:i32 = typecast %b0:i1:u1 to i32
  ret %b0:i2:i32
}

---

(source_file
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (typecast
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (type
              (unsigned_integer_type))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (unsigned_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (type
              (sigined_integer_type))))
        (exit
          (return
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))))))
