test/corpus/array.txt
==================
array
==================

fun i32 @main () {
init:
  bid: b0
  allocations: 
    %l0:[5 x i32]:a

block b0:
  j b2(0:i32)

block b2:
  %b2:p0:i32:i
  %b2:i0:u1 = cmp lt %b2:p0:i32 5:i32
  br %b2:i0:u1, b3(), b5()

block b3:
  %b3:i0:i32* = getelementptr %l0:[5 x i32]* offset 0:i32
  %b3:i1:i64 = typecast %b2:p0:i32 to i64
  %b3:i2:i64 = mul %b3:i1:i64 4:i64
  %b3:i3:i32* = getelementptr %b3:i0:i32* offset %b3:i2:i64
  %b3:i4:unit = store %b2:p0:i32 %b3:i3:i32*
  %b3:i5:i32 = add %b2:p0:i32 1:i32
  j b2(%b3:i5:i32)

block b5:
  %b5:i0:i32* = getelementptr %l0:[5 x i32]* offset 0:i32
  %b5:i1:i32 = call @sum:[ret:i32 params:(i32, i32*)]*(5:i32, %b5:i0:i32*)
  %b5:i2:u1 = cmp eq %b5:i1:i32 10:i32
  %b5:i3:i32 = typecast %b5:i2:u1 to i32
  ret %b5:i3:i32
}

fun i32 @sum (i32, i32*) {
init:
  bid: b0
  allocations: 


block b0:
  %b0:p0:i32:len
  %b0:p1:i32*:p
  j b2(0:i32, 0:i32)

block b2:
  %b2:p0:i32:result
  %b2:p1:i32:i
  %b2:i0:u1 = cmp lt %b2:p1:i32 %b0:p0:i32
  br %b2:i0:u1, b3(), b5()

block b3:
  %b3:i0:i64 = typecast %b2:p1:i32 to i64
  %b3:i1:i64 = mul %b3:i0:i64 4:i64
  %b3:i2:i32* = getelementptr %b0:p1:i32* offset %b3:i1:i64
  %b3:i3:i32 = load %b3:i2:i32*
  %b3:i4:i32 = add %b2:p0:i32 %b3:i3:i32
  %b3:i5:i32 = add %b2:p1:i32 1:i32
  j b2(%b3:i4:i32, %b3:i5:i32)

block b5:
  ret %b2:p0:i32
}

---
(source_file
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations
          (allocation
            (type
              (array_type
                (number)
                (type
                  (sigined_integer_type))))
            (identifier))))
      (block
        (block_id)
        (exit
          (jump
            (block_id)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (call
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (function_type
                        (type
                          (sigined_integer_type))
                        (function_param_types
                          (type
                            (sigined_integer_type))
                          (type
                            (pointer_type
                              (type
                                (sigined_integer_type)))))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (type
              (sigined_integer_type))))
        (exit
          (return
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type)))))))))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier)
      (function_param_types
        (type
          (sigined_integer_type))
        (type
          (pointer_type
            (type
              (sigined_integer_type))))))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (identifier))
        (exit
          (jump
            (block_id)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (phi_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (load
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))))))))


